--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         onload="this.media='all'"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 </head>
 <body style="padding:0 !important">
 <noscript>You need to enable JavaScript to run this app.</noscript>
