--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
 </head>
 <body style="padding:0 !important">
 <noscript>You need to enable JavaScript to run this app.</noscript>
+<form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
+  <label><input type="text" name="name" /></label>
+  <label><input type="email" name="email" /></label>
+  <label><textarea name="message"></textarea></label>
+</form>
 <div style="height:100%; width:100%; position:relative" id="root"></div>
 </body>
 </html>
