--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
   <label><input type="text" name="name" /></label>
   <label><input type="email" name="email" /></label>
+  <label><input type="subject" name="subject" /></label>
   <label><textarea name="message"></textarea></label>
 </form>
 <div style="height:100%; width:100%; position:relative" id="root"></div>
