changed images, added styling (+responsive) to main page carousel and it's components.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <link rel="icon" href="#">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content="Wish to learn Arabic?"/>
+  <meta name="description" content="Looking for vintage plane, want to fly one? Historic and classic airplanes for sale. Adventure flights. We also consult and provide agent services for plane sales."/>
   <title>Planes</title>
   <link rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
