--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
   <meta name="description" content="Looking for vintage plane, want to fly one? Historic and classic airplanes for sale. Adventure flights. We also consult and provide agent services for plane sales."/>
   <title>Planes</title>
   <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         media="print"
         onload="this.media='all'"
-        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
         crossorigin="anonymous">
 </head>
 <body style="padding:0 !important">
